# codesec-audit-dataset

./: .codesec.yml  .codesecignore  .deploy-verified  .dockerignore  .github-app-manifest.json  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.rag.yml  docker-compose.yml  pyproject.toml  render.yaml  render_entrypoint.sh
.github/: codesec-app-manifest.json  codesec-app-manifest.yml
api/: main.py
config/: settings.py
docs/: api_reference.md  architecture.md  dashboard.md  dataset_plan.md  demo.md  deployment_status.md  deployment_strategy.md  docker.md  email_workflows.md  evaluation.md  false_positive_control.md  github_action.md  github_action_mvp.md  github_app_setup.md  project_status.md  rag_service.md  real_pr_demo.md  render_deployment.md  review_history_api.md  saas_data_model.md  source_manifest.md  usage_limits.md  website.md
eval/: golden_cases.jsonl
examples/: codesec_action_test.py  safe_pr_demo.py  vulnerable_pr_demo.py
notebooks/: README.md  codereview.ipynb
rag_service/: README.md  index.py  main.py  schemas.py
review_engine/: __init__.py  critic.py  fixer.py  github_app.py  pipeline.py  remote_rag.py  retriever.py  risk_score.py  schemas.py
review_store/: __init__.py  db.py  models.py  repository.py
scripts/: apply_github_app_env.py  build_rag_index.py  check_lightweight_mode.py  check_main_api_remote_rag.py  check_raw_sources.py  check_remote_rag_service.py  check_render_deployment.py  complete_github_app_manifest.py  convert_owasp_cheatsheets_to_rag.py  create_deploy_pr.sh  create_github_app_manifest.py  download.py  (+21 more)
(+39 files in other folders)
