[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesec-audit-ai"
version = "0.6.0"
description = "RAG-powered security code review engine using OWASP cheat sheets"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
core = [
    "codesec-audit-ai",
]
api = [
    "codesec-audit-ai[core]",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pyjwt>=2.0.0",
    "cryptography>=3.4.0",
]
ui = [
    "codesec-audit-ai[core]",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=1.4.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
]
website = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "gunicorn>=22.0.0",
]
dev = [
    "codesec-audit-ai[api,ui,rag,website]",
]

[tool.hatch.build]
include = ["review_engine/**", "review_store/**"]
